--- a/mod.conf
+++ b/mod.conf
@@ -2,7 +2,7 @@ name = k_worldedit_gui
 author = Ketwaroo
 description = Alternate worldedit frontend to build and run commands that is agnostic of inventory.
 title = K WorldEdit Command Builder GUI
-supported_games = mineclonia,*
+supported_games=minetest_game,mineclonia,*
 min_minetest_version = 5.7
 depends = flow,worldedit_commands
 optional_depends = default,mcl_core,worldeditadditions_commands
